<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/welcome" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="388dp" />

"
        
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <Button
	        android:id="@+id/newentry"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/add" />

	    <Button
	        android:id="@+id/statistics"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/stat" />


	</LinearLayout>
"

</LinearLayout>